load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "hyper",
    values = {"define": "tee_type=hyper"},
)

config_setting(
    name = "sgx1",
    values = {"define": "tee_type=sgx1"},
)

config_setting(
    name = "sgx2",
    values = {"define": "tee_type=sgx2"},
)

cc_library(
    name = "generation",
    srcs = glob([
        "ual/generation/core/**/*.cpp",
        "ual/generation/platforms/sgx2/**/*.cpp",
        "ual/generation/untrusted/**/*.cpp",
    ]),
    copts = ["-DENV_TYPE_OCCLUM"] + select({
        ":hyper": ["-DTEE_TYPE_HYPERENCLAVE"],
        ":sgx1": ["-DTEE_TYPE_SGX1"],
        ":sgx2": ["-DTEE_TYPE_SGX2"],
        "//conditions:default": [],
    }),
    strip_include_prefix = "ual",
    visibility = ["//visibility:public"],
    deps = [
        ":generation_headers",
        ":instance",
        ":network",
        ":sgx_headers",
    ],
)

cc_library(
    name = "verification",
    srcs = glob([
        "ual/verification/core/**/*.cpp",
        "ual/verification/platforms/**/*.cpp",
        "ual/verification/uas/**/*.cpp",
    ]),
    copts = ["-DENV_TYPE_OCCLUM"],
    deps = [
        ":network",
        ":sgx2_qvl_headers",
        ":verification_headers",
    ],
)

cc_binary(
    name = "libverification.so",
    srcs = glob([
        "ual/verification/core/**/*.cpp",
        "ual/verification/platforms/**/*.cpp",
        "ual/verification/uas/**/*.cpp",
    ]),
    copts = ["-DENV_TYPE_OCCLUM"],
    deps = [
        ":network",
        ":sgx2_qvl_headers",
        ":verification_headers",
    ],
    linkshared = True,
    linkstatic = True,
)

cc_binary(
    name = "libgeneration.so",
    srcs = glob([
        "ual/generation/core/**/*.cpp",
        "ual/generation/platforms/sgx2/**/*.cpp",
        "ual/generation/trusted/*.cpp",
        "ual/generation/untrusted/**/*.cpp",
    ]),
    copts = ["-DENV_TYPE_OCCLUM"] + select({
        ":hyper": ["-DTEE_TYPE_HYPERENCLAVE"],
        ":sgx1": ["-DTEE_TYPE_SGX1"],
        ":sgx2": ["-DTEE_TYPE_SGX2"],
        "//conditions:default": [],
    }),
    deps = [
        ":generation_headers",
        ":network",
        ":instance"
    ],
    linkshared = True,
    linkstatic = True,
)

cc_library(
    name = "network",
    srcs = glob(["ual/network/**/*.cpp"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":verification_headers",
        ":sgx2_qvl",
        "@com_github_curl//:curl",
    ],
)

cc_library(
    name = "instance",
    srcs = glob(["ual/instance/**/*.cpp"]),
    hdrs = glob(["ual/instance/**/*.h"]),
    strip_include_prefix = "ual",
    copts = ["-DENV_TYPE_OCCLUM"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
    ],
)

cc_library(
    name = "common",
    srcs = glob([
        "ual/common/**/*.cpp",
        "ual/utils/untrusted/**/*.cpp",
    ]),
    hdrs = glob([
        "ual/include/attestation/**/*.h",
        "ual/include/utils/**/*.h",
        "ual/include/sgx/**/*.h",
        "ual/include/unified_attestation/**/*.h",
        "ual/include/network/**/*.h",
        "ual/include/grpc/**/*.h",
    ]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/include",
    visibility = ["//visibility:public"],
    deps = [
        ":cc_attestation_proto",
        "@cppcodec",
        "@com_github_rapidjson//:rapidjson",
        ":sgx_headers",
        "@com_github_openssl_openssl//:openssl",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "verification_headers",
    hdrs = glob(["ual/verification/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual",
)

cc_library(
    name = "generation_headers",
    hdrs = glob(["ual/generation/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual",
)

cc_library(
    name = "sgx2_qvl",
    srcs = glob([
        "ual/external/dcap/QuoteVerification/QvE/Enclave/qve.cpp",
        "ual/verification/platforms/sgx2/Utils/*.cpp",
        "ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/src/*.cpp",
        "ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/src/*.cpp",
    ], exclude = ["ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/test/**/*", "ual/external/dcap/QuoteVerification/QVL/Src/AttestationApp/test/**/*", "ual/external/dcap/QuoteVerification/QVL/Src/AttestationCommons/test/*", "ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/test/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rapidjson//:rapidjson",
        ":sgx2_qvl_headers",
        "@com_github_openssl_openssl//:openssl",
    ],
)

cc_library(
    name = "sgx2_qvl_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/dcap_quoteverify/inc/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/dcap_quoteverify/inc/",
    deps = [
        ":sgx2_qvl_common_headers",
        ":sgx2_qvl_lib2_headers",
        ":sgx2_qvl_lib_headers",
        ":sgx2_qvl_parser2_headers",
        ":sgx2_qvl_parser_headers",
        ":sgx2_qvl_utils_headers",
        ":sgx_headers",
        ":sgx2_qve_headers",
    ],
)

cc_library(
    name = "sgx2_qvl_common_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationCommons/include/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationCommons/include",
)

cc_library(
    name = "sgx2_qvl_lib_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/include/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/include",
)

cc_library(
    name = "sgx2_qvl_parser_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/include/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/include",
)

cc_library(
    name = "sgx2_qvl_lib2_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/src/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationLibrary/src",
)

cc_library(
    name = "sgx2_qvl_parser2_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/src/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationParsers/src",
)

cc_library(
    name = "sgx2_qvl_utils_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QVL/Src/AttestationCommons/include/Utils/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QVL/Src/AttestationCommons/include/Utils",
)

cc_library(
    name = "sgx2_qve_headers",
    hdrs = glob(["ual/external/dcap/QuoteVerification/QvE/Include/**/*.h"]),
    strip_include_prefix = "ual/external/dcap/QuoteVerification/QvE/Include",
)

cc_library(
    name = "sgx_headers",
    hdrs = glob(["ual/include/sgx/**/*.h"]),
    copts = ["-DENV_TYPE_OCCLUM"],
    strip_include_prefix = "ual/include/sgx",
)

cc_proto_library(
    name = "cc_attestation_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":attestation_proto",
    ],
)

proto_library(
    name = "attestation_proto",
    srcs = glob([
        "ual/proto/*.proto",
    ]),
    strip_import_prefix = "ual/proto",
    visibility = ["//visibility:public"],
)
